# connect-4-reinforced-learning

./: .gitignore  Board.py  GUI.py  Player.py  README.md  State.py  connect4.py  pyproject.toml  requirements.txt
docs/: .buildinfo  Board.html  GUI.html  Player.html  State.html  connect4.html  debug.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: Board.doctree  GUI.doctree  Player.doctree  State.doctree  connect4.doctree  debug.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: Board.html  GUI.html  index.html  py-modindex.html  search.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
