[tool.poetry]
name = "repl_python3_FINAL-Connect-4-v001"
version = "0.1.0"
description = ""
authors = ["Jack Kelly <kelly14@iu.edu","Cassie Chaput <Cchaput@iu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
cl-chess = "^1.2.7"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
